--- a/html/index.html
+++ b/html/index.html
@@ -14,7 +14,7 @@
 		<!-- meta character set -->
 		<meta charset="UTF-8">
 		<!-- Site Title -->
-		<title>Music</title>
+		<title>Listen To This</title>
 
 		<link href="https://fonts.googleapis.com/css?family=Poppins:100,200,400,300,500,600,700" rel="stylesheet">
 			<!--
@@ -38,14 +38,14 @@
 					<div class="header-wrap">
 						<div class="header-top d-flex justify-content-between align-items-center">
 							<div class="logo">
-								<a href="#home"><img src="../img/logo.png" alt=""></a>
+
 							</div>
 							<div class="main-menubar d-flex align-items-center">
 								<nav class="hide">
 									<a href="#home">Home</a>
-									<a href="#feature">Feature</a>
-									<a href="#about">About</a>
-									<a href="#contact">Contact</a>
+									<a href="#register">Register</a>
+									<a href="#listen">Listen</a>
+									<a href="#support">Support</a>
 								</nav>
 								<div class="menu-bar"><span class="lnr lnr-menu"></span></div>
 							</div>
@@ -59,10 +59,11 @@
 					<div class="row fullscreen align-items-center justify-content-center" style="height: 735px;">
 						<div class="col-lg-10">
 							<div class="banner-content text-center">
-								<h1 class="text-uppercase text-white">Music is life</h1>
+								<h1 class="text-uppercase text-white">Listen To This</h1>
 								<p class="text-uppercase mx-auto">
-									Universal Truth
+									Listen Together
 								</p>
+								<button class="primary-btn d-inline-flex align-items-center mt-20"><span class="mr-10">Listen Now</span><span class="lnr lnr-arrow-right"></span></button> <br>
 							</div>
 						</div>
 					</div>
@@ -92,7 +93,7 @@
 			<!-- End quote Area -->
 
 			<!-- Start feature Area -->
-			<section class="feature-area pb-100" id="feature">
+			<section class="feature-area pb-100" id="register">
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-4 col-md-4 no-padding single-img">
@@ -228,7 +229,7 @@
 			<!-- End member Area -->
 
 			<!-- Start About Area -->
-			<section class="about-area" id="about">
+			<section class="about-area" id="listen">
 				<div class="container-fluid">
 					<div class="row  d-flex justify-content-start align-items-center">
 						<div class="col-lg-6 col-md-12 no-padding">
@@ -250,7 +251,7 @@
 			<!-- End About Area -->
 
 			<!-- Start contact Area -->
-			<section class="contact-area pt-100 pb-100" id="contact">
+			<section class="contact-area pt-100 pb-100" id="support">
 				<div class="container">
 					<div class="row d-flex justify-content-center">
 						<div class="col-lg-4 title-section">
