--- a/public/index.html
+++ b/public/index.html
@@ -4,7 +4,7 @@
 		<!-- Mobile Specific Meta -->
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<!-- Favicon-->
-		<link rel="shortcut icon" href="../img/">
+		<link rel="shortcut icon" href="img/">
 		<!-- Author Meta -->
 		<meta name="author" content="Colorlib">
 		<!-- Meta Description -->
@@ -20,12 +20,12 @@
 			<!--
 			CSS
 			============================================= -->
-			<link rel="stylesheet" href="../css/linearicons.css">
-			<link rel="stylesheet" href="../css/owl.carousel.css">
-			<link rel="stylesheet" href="../css/font-awesome.min.css">
-			<link rel="stylesheet" href="../css/magnific-popup.css">
-			<link rel="stylesheet" href="../css/bootstrap.css">
-			<link rel="stylesheet" href="../css/main.css">
+			<link rel="stylesheet" href="css/linearicons.css">
+			<link rel="stylesheet" href="css/owl.carousel.css">
+			<link rel="stylesheet" href="css/font-awesome.min.css">
+			<link rel="stylesheet" href="css/magnific-popup.css">
+			<link rel="stylesheet" href="css/bootstrap.css">
+			<link rel="stylesheet" href="css/main.css">
 		</head>
 		<body>
 			<!-- Start Banner Area -->
@@ -97,41 +97,41 @@
 				<div class="container">
 					<div class="row">
 						<div class="col-lg-4 col-md-4 no-padding single-img">
-							  <img src="../img/f1.jpg" class="image img-fluid">
+							  <img src="img/f1.jpg" class="image img-fluid">
 							  <div class="middle">
 							    <h2 class="text-uppercase text-white">Concert Toronto</h2>
 							    <p>Need concert details</p>
 							  </div>
 						</div>
 						<div class="col-lg-4 col-md-4 no-padding single-img">
-							  <img src="../img/f2.jpg" class="image img-fluid">
+							  <img src="img/f2.jpg" class="image img-fluid">
 							  <div class="middle">
 							    <h2 class="text-uppercase text-white">Concert Toronto</h2>
 							    <p>Need concert details</p>
 							  </div>
 						</div>
 						<div class="col-lg-4 col-md-4 no-padding single-img">
-							  <img src="../img/f3.jpg" class="image img-fluid">
+							  <img src="img/f3.jpg" class="image img-fluid">
 							  <div class="middle">
 							    <h2 class="text-uppercase text-white">Concert Toronto</h2>
 							    <p>Need concert details</p>
 							  </div>
 						</div>
 						<div class="col-lg-6 col-sm-12 no-padding single-img">
-							  <img src="../img/f4.jpg" class="image img-fluid">
+							  <img src="img/f4.jpg" class="image img-fluid">
 							  <div class="middle2">
 							  	<a href="https://www.youtube.com/watch?v=L3V7LKYPIUQ" class="play-btn">
-							  		<img class="vdo-icon" src="../img/video-btn.png" alt="">
+							  		<img class="vdo-icon" src="img/video-btn.png" alt="">
 							  	</a>
 							    <h2 class="text-uppercase text-white">Being unique is the preference</h2>
 							    <p>Youtube video will appear in popover</p>
 							  </div>
 						</div>
 						<div class="col-lg-6 col-sm-12 no-padding single-img">
-							  <img src="../img/f5.jpg" class="image img-fluid">
+							  <img src="img/f5.jpg" class="image img-fluid">
 							  <div class="middle2">
 							  	<a href="https://www.youtube.com/watch?v=L3V7LKYPIUQ" class="play-btn">
-							  		<img class="vdo-icon" src="../img/video-btn.png" alt="">
+							  		<img class="vdo-icon" src="img/video-btn.png" alt="">
 							  	</a>
 							    <h2 class="text-uppercase text-white">Being unique is the preference</h2>
 							    <p>Youtube video will appear in popover</p>
@@ -150,7 +150,7 @@
 						<div class="col-lg-6">
 							<div class="single-service d-flex justify-content-between align-items-top">
 								<div class="icon">
-									<img src="../img/s1.png" alt="">
+									<img src="img/s1.png" alt="">
 								</div>
 								<div class="desc">
 									<h4 class="text-uppercase">DJ Party on the house</h4>
@@ -161,7 +161,7 @@
 							</div>
 							<div class="single-service d-flex justify-content-between align-items-top">
 								<div class="icon">
-									<img src="../img/s2.png" alt="">
+									<img src="img/s2.png" alt="">
 								</div>
 								<div class="desc">
 									<h4 class="text-uppercase">Concert at its best</h4>
@@ -172,7 +172,7 @@
 							</div>
 							<div class="single-service d-flex justify-content-between align-items-top">
 								<div class="icon">
-									<img src="../img/s3.png" alt="">
+									<img src="img/s3.png" alt="">
 								</div>
 								<div class="desc">
 									<h4 class="text-uppercase">playing Music Videos</h4>
@@ -195,7 +195,7 @@
 						<div class="active-member-carousel">
 							<div class="single-member item">
 									<div class="member-info d-flex flex-row justify-content-center">
-										<img class="" style="width:100px;height: 100%;" src="../img/m1.jpg" alt="">
+										<img class="" style="width:100px;height: 100%;" src="img/m1.jpg" alt="">
 										<div class="details">
 											<h4 class="text-white text-uppercase">Fredric Elsa</h4>
 											<p>Lead Vocalist</p>
@@ -208,7 +208,7 @@
 							</div>
 							<div class="single-member item">
 									<div class="member-info d-flex flex-row justify-content-center">
-										<img class="" style="width:100px;height: 100%;" src="../img/m1.jpg" alt="">
+										<img class="" style="width:100px;height: 100%;" src="img/m1.jpg" alt="">
 										<div class="details">
 											<h4 class="text-white text-uppercase">Fredric Elsa</h4>
 											<p>Lead Vocalist</p>
@@ -233,7 +233,7 @@
 				<div class="container-fluid">
 					<div class="row  d-flex justify-content-start align-items-center">
 						<div class="col-lg-6 col-md-12 no-padding">
-							<img class="img-fluid" src="../img/about-img.png" alt="">
+							<img class="img-fluid" src="img/about-img.png" alt="">
 						</div>
 						<div class="about-details col-lg-4 col-md-12">
 							<h2>
@@ -312,13 +312,13 @@
 			<!-- End Footer Area -->
 
 
-			<script src="../js/vendor/jquery-2.2.4.min.js"></script>
+			<script src="js/vendor/jquery-2.2.4.min.js"></script>
 			<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.11.0/umd/popper.min.js" integrity="sha384-b/U6ypiBEHpOf/4+1nzFpr53nxSS+GLCkfwBdFNTxtclqqenISfwAzpKaMNFNmj4" crossorigin="anonymous"></script>
-			<script src="../js/vendor/bootstrap.min.js"></script>
-			<script src="../js/owl.carousel.min.js"></script>
-			<script src="../js/jquery.sticky.js"></script>
-			<script src="../js/parallax.min.js"></script>
-			<script src="../js/jquery.magnific-popup.min.js"></script>
-			<script src="../js/main.js"></script>
+			<script src="js/vendor/bootstrap.min.js"></script>
+			<script src="js/owl.carousel.min.js"></script>
+			<script src="js/jquery.sticky.js"></script>
+			<script src="js/parallax.min.js"></script>
+			<script src="js/jquery.magnific-popup.min.js"></script>
+			<script src="js/main.js"></script>
 		</body>
 	</html>
