listen now button synchronized to spotify login

--- a/public/index.html
+++ b/public/index.html
@@ -32,13 +32,15 @@
         <div class="container">
             <div id="login">
                 <h1>This is an example of the Authorization Code flow</h1>
-                <a href="/login" class="btn btn-primary">Log in with Spotify</a>
+                <!--<a href="/login" class="btn btn-primary">Log in with Spotify</a>-->
             </div>
             <div id="loggedin">
-                <div id="user-profile">
+				<div id="oauth">
+				</div>
+
+				<div id="user-profile">
                 </div>
-                <div id="oauth">
-                </div>
+
                 <button class="btn btn-default" id="obtain-new-token">Obtain new token using the refresh token</button>
             </div>
         </div>
@@ -184,7 +186,7 @@
 								<p class="text-uppercase mx-auto">
 									Listen Together
 								</p>
-								<button class="primary-btn d-inline-flex align-items-center mt-20"><span class="mr-10">Listen Now</span><span class="lnr lnr-arrow-right"></span></button> <br>
+								<a href="/login" class="primary-btn d-inline-flex align-items-center mt-20"><span class="mr-10">Listen Now</span><span class="lnr lnr-arrow-right"></span></a></a> <br>
 							</div>
 						</div>
 					</div>
