updated landign page

--- a/public/index.html
+++ b/public/index.html
@@ -29,125 +29,29 @@
 		</head>
 		<body>
 
-        <div class="container">
-
-            <div id="loggedin">
-				<div id="oauth">
-				</div>
-
-				<div id="user-profile">
-                </div>
-
-
-            </div>
-        </div>
-
         <script id="user-profile-template" type="text/x-handlebars-template">
-            <h1>Logged in as {{display_name}}</h1>
+
             <div class="media">
-                <div class="pull-left">
-                    <img class="media-object" width="150" src="{{images.0.url}}" />
-                </div>
+
                 <div class="media-body">
                     <dl class="dl-horizontal">
-                        <dt>Display name</dt><dd class="clearfix">{{display_name}}</dd>
-                        <dt>Id</dt><dd>{{id}}</dd>
-                        <dt>Email</dt><dd>{{email}}</dd>
-                        <dt>Spotify URI</dt><dd><a href="{{external_urls.spotify}}">{{external_urls.spotify}}</a></dd>
-                        <dt>Link</dt><dd><a href="{{href}}">{{href}}</a></dd>
-                        <dt>Profile Image</dt><dd class="clearfix"><a href="{{images.0.url}}">{{images.0.url}}</a></dd>
-                        <dt>Country</dt><dd>{{country}}</dd>
+						<img class="profile-picture" width="150" src="{{images.0.url}}" />
+						<h1 class="profile-name">{{display_name}}</h1>
                     </dl>
                 </div>
             </div>
         </script>
 
         <script id="oauth-template" type="text/x-handlebars-template">
-            <h2>oAuth info</h2>
-            <dl class="dl-horizontal">
-                <dt>Access token</dt><dd class="text-overflow">{{access_token}}</dd>
-                <dt>Refresh token</dt><dd class="text-overflow">{{refresh_token}}</dd>
-            </dl>
+            <!--<h2>oAuth info</h2>-->
+            <!--<dl class="dl-horizontal">-->
+                <!--&lt;!&ndash;<dt>Access token</dt><dd class="text-overflow">{{access_token}}</dd>&ndash;&gt;-->
+                <!--&lt;!&ndash;<dt>Refresh token</dt><dd class="text-overflow">{{refresh_token}}</dd>&ndash;&gt;-->
+            <!--</dl>-->
         </script>
 
         <script src="//cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0-alpha.1/handlebars.min.js"></script>
         <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
-        <script>
-            (function() {
-
-                /**
-                 * Obtains parameters from the hash of the URL
-                 * @return Object
-                 */
-                function getHashParams() {
-                    var hashParams = {};
-                    var e, r = /([^&;=]+)=?([^&;]*)/g,
-                        q = window.location.hash.substring(1);
-                    while ( e = r.exec(q)) {
-                        hashParams[e[1]] = decodeURIComponent(e[2]);
-                    }
-                    return hashParams;
-                }
-
-                var userProfileSource = document.getElementById('user-profile-template').innerHTML,
-                    userProfileTemplate = Handlebars.compile(userProfileSource),
-                    userProfilePlaceholder = document.getElementById('user-profile');
-
-                var oauthSource = document.getElementById('oauth-template').innerHTML,
-                    oauthTemplate = Handlebars.compile(oauthSource),
-                    oauthPlaceholder = document.getElementById('oauth');
-
-                var params = getHashParams();
-
-                var access_token = params.access_token,
-                    refresh_token = params.refresh_token,
-                    error = params.error;
-
-                if (error) {
-                    alert('There was an error during the authentication');
-                } else {
-                    if (access_token) {
-                        // render oauth info
-                        oauthPlaceholder.innerHTML = oauthTemplate({
-                            access_token: access_token,
-                            refresh_token: refresh_token
-                        });
-
-                        $.ajax({
-                            url: 'https://api.spotify.com/v1/me',
-                            headers: {
-                                'Authorization': 'Bearer ' + access_token
-                            },
-                            success: function(response) {
-                                userProfilePlaceholder.innerHTML = userProfileTemplate(response);
-
-                                $('#login').hide();
-                                $('#loggedin').show();
-                            }
-                        });
-                    } else {
-                        // render initial screen
-                        $('#login').show();
-                        $('#loggedin').hide();
-                    }
-
-                    document.getElementById('obtain-new-token').addEventListener('click', function() {
-                        $.ajax({
-                            url: '/refresh_token',
-                            data: {
-                                'refresh_token': refresh_token
-                            }
-                        }).done(function(data) {
-                            access_token = data.access_token;
-                            oauthPlaceholder.innerHTML = oauthTemplate({
-                                access_token: access_token,
-                                refresh_token: refresh_token
-                            });
-                        });
-                    }, false);
-                }
-            })();
-        </script>
 			<!-- Start Banner Area -->
 			<section class="banner-area relative" id="home">
 				<div class="container">
@@ -192,243 +96,97 @@
 			<!-- End Banner Area -->
 
 			<!-- Start quote Area -->
-			<section class="quote-area pt-100 pb-100">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6 col-sm-12 quote-left">
-							<h2 class="text-right">
-								<span>Music</span> gives soul to the universe,<br>
-								wings to the <span>mind</span>, flight<br>
-								to the <span>imagination</span>.
-							</h2>
-						</div>
-						<div class="col-lg-6 col-sm-12 quote-right">
-							<p class="text-left">
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
-						</div>
-					</div>
+
+
+
+		<div id="listen" class="container">
+			<div id="loggedin">
+				<div id="oauth">
 				</div>
-			</section>
-			<!-- End quote Area -->
-
-			<!-- Start feature Area -->
-			<section class="feature-area pb-100" id="register">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-4 col-md-4 no-padding single-img">
-							  <img src="img/f1.jpg" class="image img-fluid">
-							  <div class="middle">
-							    <h2 class="text-uppercase text-white">Concert Toronto</h2>
-							    <p>Need concert details</p>
-							  </div>
-						</div>
-						<div class="col-lg-4 col-md-4 no-padding single-img">
-							  <img src="img/f2.jpg" class="image img-fluid">
-							  <div class="middle">
-							    <h2 class="text-uppercase text-white">Concert Toronto</h2>
-							    <p>Need concert details</p>
-							  </div>
-						</div>
-						<div class="col-lg-4 col-md-4 no-padding single-img">
-							  <img src="img/f3.jpg" class="image img-fluid">
-							  <div class="middle">
-							    <h2 class="text-uppercase text-white">Concert Toronto</h2>
-							    <p>Need concert details</p>
-							  </div>
-						</div>
-						<div class="col-lg-6 col-sm-12 no-padding single-img">
-							  <img src="img/f4.jpg" class="image img-fluid">
-							  <div class="middle2">
-							  	<a href="https://www.youtube.com/watch?v=L3V7LKYPIUQ" class="play-btn">
-							  		<img class="vdo-icon" src="img/video-btn.png" alt="">
-							  	</a>
-							    <h2 class="text-uppercase text-white">Being unique is the preference</h2>
-							    <p>Youtube video will appear in popover</p>
-							  </div>
-						</div>
-						<div class="col-lg-6 col-sm-12 no-padding single-img">
-							  <img src="img/f5.jpg" class="image img-fluid">
-							  <div class="middle2">
-							  	<a href="https://www.youtube.com/watch?v=L3V7LKYPIUQ" class="play-btn">
-							  		<img class="vdo-icon" src="img/video-btn.png" alt="">
-							  	</a>
-							    <h2 class="text-uppercase text-white">Being unique is the preference</h2>
-							    <p>Youtube video will appear in popover</p>
-							  </div>
-						</div>
-
-					</div>
+				<div id="user-profile">
 				</div>
-			</section>
-			<!-- End feature Area -->
+			</div>
+		</div>
+		<script>
+			(function() {
 
-			<!-- Start service Area -->
-			<section class="service-area pt-100 pb-100" data-parallax="scroll" data-image-src="img/service-bg.jpg">
-				<div class="container">
-					<div class="row">
-						<div class="col-lg-6">
-							<div class="single-service d-flex justify-content-between align-items-top">
-								<div class="icon">
-									<img src="img/s1.png" alt="">
-								</div>
-								<div class="desc">
-									<h4 class="text-uppercase">DJ Party on the house</h4>
-									<p>
-										Usage of the Internet is becoming more common due to rapid advancement of technology and the power of globalization.
-									</p>
-								</div>
-							</div>
-							<div class="single-service d-flex justify-content-between align-items-top">
-								<div class="icon">
-									<img src="img/s2.png" alt="">
-								</div>
-								<div class="desc">
-									<h4 class="text-uppercase">Concert at its best</h4>
-									<p>
-										Usage of the Internet is becoming more common due to rapid advancement of technology and the power of globalization.
-									</p>
-								</div>
-							</div>
-							<div class="single-service d-flex justify-content-between align-items-top">
-								<div class="icon">
-									<img src="img/s3.png" alt="">
-								</div>
-								<div class="desc">
-									<h4 class="text-uppercase">playing Music Videos</h4>
-									<p>
-										Usage of the Internet is becoming more common due to rapid advancement of technology and the power of globalization.
-									</p>
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- End service Area -->
+				/**
+				 * Obtains parameters from the hash of the URL
+				 * @return Object
+				 */
+				function getHashParams() {
+					var hashParams = {};
+					var e, r = /([^&;=]+)=?([^&;]*)/g,
+							q = window.location.hash.substring(1);
+					while ( e = r.exec(q)) {
+						hashParams[e[1]] = decodeURIComponent(e[2]);
+					}
+					return hashParams;
+				}
 
-			<!-- Start member Area -->
-			<section class="member-area relative pt-100 pb-100">
-				<div class="overlay overlay-bg"></div>
-				<div class="container relative">
-					<div class="row justify-content-center">
-						<div class="active-member-carousel">
-							<div class="single-member item">
-									<div class="member-info d-flex flex-row justify-content-center">
-										<img class="" style="width:100px;height: 100%;" src="img/m1.jpg" alt="">
-										<div class="details">
-											<h4 class="text-white text-uppercase">Fredric Elsa</h4>
-											<p>Lead Vocalist</p>
-											<p>Date of Birth: 31st Dec, 1989</p>
-										</div>
-									</div>
-									<p class="summery">
-										Usage of the Internet is becoming more common due to rapid advancement of technology and the power of globalization. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-									</p>
-							</div>
-							<div class="single-member item">
-									<div class="member-info d-flex flex-row justify-content-center">
-										<img class="" style="width:100px;height: 100%;" src="img/m1.jpg" alt="">
-										<div class="details">
-											<h4 class="text-white text-uppercase">Fredric Elsa</h4>
-											<p>Lead Vocalist</p>
-											<p>Date of Birth: 31st Dec, 1989</p>
-										</div>
-									</div>
-									<p class="summery">
-										Usage of the Internet is becoming more common due to rapid advancement of technology and the power of globalization. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-									</p>
-							</div>
+				var userProfileSource = document.getElementById('user-profile-template').innerHTML,
+						userProfileTemplate = Handlebars.compile(userProfileSource),
+						userProfilePlaceholder = document.getElementById('user-profile');
 
-						</div>
-					</div>
-					<div class="next-trigger"><span class="lnr lnr-arrow-right"></span></div>
-					<div class="prev-trigger"><span class="lnr lnr-arrow-left"></span></div>
-				</div>
-			</section>
-			<!-- End member Area -->
+				var oauthSource = document.getElementById('oauth-template').innerHTML,
+						oauthTemplate = Handlebars.compile(oauthSource),
+						oauthPlaceholder = document.getElementById('oauth');
 
-			<!-- Start About Area -->
-			<section class="about-area" id="listen">
-				<div class="container-fluid">
-					<div class="row  d-flex justify-content-start align-items-center">
-						<div class="col-lg-6 col-md-12 no-padding">
-							<img class="img-fluid" src="img/about-img.png" alt="">
-						</div>
-						<div class="about-details col-lg-4 col-md-12">
-							<h2>
-								<span>Music</span> gives soul to the universe, <br>
-								wings to the <span>mind</span>, flight <br>
-								to the <span>imagination</span>.
-							</h2>
-							<p>
-								Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore  et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
-							</p>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- End About Area -->
+				var params = getHashParams();
 
-			<!-- Start contact Area -->
-			<section class="contact-area pt-100 pb-100" id="support">
-				<div class="container">
-					<div class="row d-flex justify-content-center">
-						<div class="col-lg-4 title-section">
-							<h2 class="text-uppercase">
-								Send <br>
-								Us <br>
-								Message
-							</h2>
-							<p>
-								We won’t send any kind of spam
-							</p>
-						</div>
-						<div class="col-lg-8">
-								<form id="myForm" action="../mail.php" method="post" class="contact-form">
-									<div class="row justify-content-center">
-										<div class="col-lg-6">
-											<input name="fname" placeholder="Enter your name" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter your name'" class="common-input mt-20" required="" type="text">
-
-											<input name="email" placeholder="Enter email address" pattern="[A-Za-z0-9._%+-]+@[A-Za-z0-9.-]+\.[A-Za-z]{1,63}$" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter email address'" class="common-input mt-20" required="" type="email">
-
-											<input name="phone" placeholder="Enter phone number"  onfocus="this.placeholder = ''" onblur="this.placeholder = 'Enter phone number'" class="common-input mt-20" required="" type="tel">
-										</div>
-										<div class="col-lg-6">
-											<textarea class="common-textarea mt-20" name="message" placeholder="Messege" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Messege'" required=""></textarea>
-
-											<button class="primary-btn d-inline-flex align-items-center mt-20"><span class="mr-10">Send Message</span><span class="lnr lnr-arrow-right"></span></button> <br>
-											<div class="alert-msg"></div>
-										</div>
-									</div>
-								</form>
-						</div>
-					</div>
-				</div>
-			</section>
-			<!-- End contact Area -->
+				var access_token = params.access_token,
+						refresh_token = params.refresh_token,
+						error = params.error;
 
 
-			<!-- Strat Footer Area -->
 
-			<footer class="footer-area">
-				<div class="container">
-					<div class="row footer-content">
-						<div class="col-lg-6 copy-right-text">
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-							Copyright &copy;<script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made with <i class="fa fa-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
-							<!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
-						</div>
-						<div class="col-lg-6 footer-social">
-							<a href="#"><i class="fa fa-facebook"></i></a>
-							<a href="#"><i class="fa fa-twitter"></i></a>
-							<a href="#"><i class="fa fa-dribbble"></i></a>
-							<a href="#"><i class="fa fa-behance"></i></a>
-						</div>
-					</div>
-				</div>
-			</footer>
 
+				if (error) {
+					alert('There was an error during the authentication');
+				} else {
+					if (access_token) {
+						// render oauth info
+						oauthPlaceholder.innerHTML = oauthTemplate({
+							access_token: access_token,
+							refresh_token: refresh_token
+						});
+
+						$.ajax({
+							url: 'https://api.spotify.com/v1/me',
+							headers: {
+								'Authorization': 'Bearer ' + access_token
+							},
+							success: function(response) {
+								userProfilePlaceholder.innerHTML = userProfileTemplate(response);
+
+								$('#login').hide();
+								$('#loggedin').show();
+								// location.href = "#";
+								// location.href = "#listen";
+							}
+						});
+					} else {
+						// render initial screen
+						$('#login').show();
+						$('#loggedin').hide();
+					}
+				}
+
+				
+
+
+			})();
+
+
+
+
+
+
+
+
+
+
+		</script>
 			<!-- End Footer Area -->
 
 
